--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -2117,14 +2117,14 @@
     margin-bottom: 40px;
   }
   .services-title {
-    font-size: 42px;
-    font-weight: 700;
+    font-size: 32px;
+    /* font-weight: 700; */
     margin-bottom: 50px;
   }
 
   .cro-header h2 {
-    font-size: 40px;
-    font-weight: 700;
+    font-size: 32px;
+    /* font-weight: 700; */
     margin: 0;
   }
   .cro-box h3 {
@@ -2134,7 +2134,7 @@
     margin-bottom: 25px;
   }
   .cro-box p {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.4;
     font-weight: 300;
     color: #333;
@@ -2149,6 +2149,15 @@
   .cro-content {
     flex: 1 1;
   }
+  .faq-title {
+    font-size: 32px;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 50px;
+}
+.faq-question {
+  font-size: 20px;
+}
 }
 /* Small devices (landscape phones, 576px and up) */
 @media only screen and (min-width: 576px) and (max-width: 767px) {
@@ -2299,7 +2308,7 @@
     position: static;
   }
   .banner-content .title {
-    font-size: 26px;
+    font-size: 25px;
     margin-bottom: 30px;
   }
   .banner-content .sub-title {
@@ -2323,4 +2332,12 @@
   .tab-navs {
     margin-top: 15px;
   }
+  .logo img {
+    width: 170px;
+}
+.service-box p {
+    font-size: 15px;
+    line-height: 1.6;
+    color: #333;
+}
 }
